--- a/notebooks/1.Data preparation.ipynb
+++ b/notebooks/1.Data preparation.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "123e3cc5-5e5d-49f0-af69-fec86e427e08",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "b26d88d0-4f42-4b18-ba9e-9c9b1df333e0",
    "metadata": {},
    "outputs": [],
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "4b100296-a528-4377-be5b-38ed14072376",
    "metadata": {},
    "outputs": [
@@ -601,12 +602,372 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "39f98c5e-8135-456c-bbad-4bb64822640a",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d1a11ee-a770-4302-b3d0-5ab6dcc2b881",
+   "metadata": {},
+   "source": [
+    "## Missing boroughs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
+   "id": "54923c11-8c54-4f11-81f0-1f690581ca2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['QUEENS', 'BROOKLYN', 'MANHATTAN', 'BRONX', 'Unknown',\n",
+       "       'STATEN ISLAND'], dtype=object)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"BOROUGH\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "id": "6e24ef48-50a0-4e0e-ad2f-ed29d3706350",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(484625)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check how many boroughs are missing\n",
+    "df[\"BOROUGH\"].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "32f03b40-2d56-42c8-bc23-a9a5d7ae74a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ZIP CODE     484802\n",
+       "LATITUDE     196285\n",
+       "LONGITUDE    196285\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"ZIP CODE\", \"LATITUDE\", \"LONGITUDE\"]].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b1bcc07-f1cd-4dfc-b009-df39b54cf0c7",
+   "metadata": {},
+   "source": [
+    "### Approach 1: ID duplicates reference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e06102e1-c077-4139-af5e-bc590abfd44b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([ 268395,  259687,  301378,   26499,  220040,   65113,     510, 4195373,\n",
+      "       4187562, 4197196,\n",
+      "       ...\n",
+      "       4198173, 4181743, 4187134, 4198571, 4196772, 4183798, 4198749, 4202457,\n",
+      "       4195773, 4184637],\n",
+      "      dtype='int64', name='COLLISION_ID', length=394221)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Series with duplicates\n",
+    "duplicate_ids=df[\"COLLISION_ID\"].value_counts()\n",
+    "duplicate_ids = duplicate_ids[duplicate_ids > 1].index\n",
+    "print(duplicate_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a5703db3-5803-463f-83d0-f865d87a12b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(788442, 2)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_duplicates = df[df[\"COLLISION_ID\"].isin(duplicate_ids)][[\"COLLISION_ID\", \"BOROUGH\"]]\n",
+    "df_duplicates.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c80c2840-afd3-48fa-b4a1-0d0d08a79c0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BOROUGH\n",
+       "False    560334\n",
+       "True     228108\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_duplicates[\"BOROUGH\"].isna().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9e0c7d05-ba3b-4caa-acb9-441d396daa7b",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "id_to_borough = df_duplicates[df_duplicates[\"BOROUGH\"].isna()].drop_duplicates(subset=\"COLLISION_ID\")\n",
+    "borough_map = dict(zip(id_to_borough['COLLISION_ID'], id_to_borough['BOROUGH']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "b9178241-3228-4452-8c46-44119826fb92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fill_borough = df\n",
+    "df_fill_borough[\"BOROUGH\"] = df.apply(\n",
+    "    lambda row: borough_map.get(row[\"COLLISION_ID\"], row[\"BOROUGH\"]) if pd.isna(row[\"BOROUGH\"]) else row[\"BOROUGH\"],\n",
+    "                                axis=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "7a1fbc5a-c0ff-4e11-8a5b-3019eefb4824",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining missing BOROUGHs: 484625\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Remaining missing BOROUGHs:\", df_fill_borough['BOROUGH'].isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "076f700f-7a8d-491d-8b4e-50da5b83a345",
+   "metadata": {},
+   "source": [
+    "### Conslusion - can't fill NaN by referring to id duplicates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c07598f-4580-4e24-b641-f4f7f8b16b38",
+   "metadata": {},
+   "source": [
+    "### Approach 2: Zip code reference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "2878e7c9-45ed-461a-ad4a-2896385d0de3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing rows 484625\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if the same rows are missing both - zip code and borough\n",
+    "zip_and_borough_missing = (df[\"BOROUGH\"].isna() & df[\"ZIP CODE\"].isna()).sum()\n",
+    "print(f\"Missing rows {zip_and_borough_missing}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc2ddddd-eade-4e59-b798-50e2ba8397f5",
+   "metadata": {},
+   "source": [
+    "### Conslusion - can't fill NaN by referring to zip code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4adda5f0-9239-49b2-96f0-a102a23ad306",
+   "metadata": {},
+   "source": [
+    "### Approach 3: Label NaN as \"Unknown\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "a3963c1c-3369-402f-ab8a-ec3be0e6510f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fill_borough = df\n",
+    "df_fill_borough[\"BOROUGH\"] = df_fill_borough[\"BOROUGH\"].fillna(\"Unknown\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "0f1581e3-e6b4-45c4-a864-75fbca91a5a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 1612178 entries, 0 to 1612177\n",
+      "Series name: BOROUGH\n",
+      "Non-Null Count    Dtype \n",
+      "--------------    ----- \n",
+      "1612178 non-null  object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 12.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_fill_borough[\"BOROUGH\"].info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "fa75aa54-80d5-444f-b949-af006507b9b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Passing Too Closely', 'Driver Inattention/Distraction',\n",
+       "       'Unspecified', 'Unsafe Speed', 'Reaction to Uninvolved Vehicle',\n",
+       "       'Following Too Closely', 'Passing or Lane Usage Improper',\n",
+       "       'View Obstructed/Limited', 'Unsafe Lane Changing',\n",
+       "       'Aggressive Driving/Road Rage', 'Other Vehicular',\n",
+       "       'Driverless/Runaway Vehicle', 'Turning Improperly',\n",
+       "       'Failure to Yield Right-of-Way', 'Backing Unsafely',\n",
+       "       'Brakes Defective', 'Drugs (illegal)', 'Pavement Defective',\n",
+       "       'Traffic Control Disregarded', 'Lane Marking Improper/Inadequate',\n",
+       "       'Tire Failure/Inadequate', 'Failure to Keep Right',\n",
+       "       'Obstruction/Debris', 'Outside Car Distraction',\n",
+       "       'Alcohol Involvement', 'Driver Inexperience', 'Pavement Slippery',\n",
+       "       'Pedestrian/Bicyclist/Other Pedestrian Error/Confusion',\n",
+       "       'Using On Board Navigation Device', nan, 'Lost Consciousness',\n",
+       "       'Passenger Distraction', 'Oversized Vehicle', 'Fatigued/Drowsy',\n",
+       "       'Illnes', 'Fell Asleep', 'Steering Failure', 'Glare',\n",
+       "       'Physical Disability', 'Prescription Medication', 'Animals Action',\n",
+       "       'Cell Phone (hand-Held)', 'Cell Phone (hands-free)',\n",
+       "       'Other Lighting Defects', 'Listening/Using Headphones',\n",
+       "       'Traffic Control Device Improper/Non-Working',\n",
+       "       'Accelerator Defective', 'Tow Hitch Defective',\n",
+       "       'Vehicle Vandalism', 'Other Electronic Device', 'Tinted Windows',\n",
+       "       'Windshield Inadequate', 'Eating or Drinking',\n",
+       "       'Shoulders Defective/Improper', 'Texting', 'Headlights Defective',\n",
+       "       'Reaction to Other Uninvolved Vehicle', 'Drugs (Illegal)',\n",
+       "       'Illness', '80', 'Cell Phone (hand-held)', '1'], dtype=object)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_fill_borough[\"CONTRIBUTING FACTOR VEHICLE 1\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "e8eab04f-98d6-403b-b2bb-534bafb4694d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([\"{'type': 'Point', 'coordinates': [-73.790184, 40.676052]}\",\n",
+       "       \"{'type': 'Point', 'coordinates': [-73.951096, 40.65778]}\",\n",
+       "       \"{'type': 'Point', 'coordinates': [-73.993835, 40.718143]}\", ...,\n",
+       "       \"{'type': 'Point', 'coordinates': [-73.7528938, 40.7765927]}\",\n",
+       "       \"{'type': 'Point', 'coordinates': [-73.9648297, 40.7754662]}\",\n",
+       "       \"{'type': 'Point', 'coordinates': [-73.7029656, 40.7362448]}\"],\n",
+       "      shape=(182541,), dtype=object)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_fill_borough[\"LOCATION\"].unique()"
+   ]
   }
  ],
  "metadata": {
