--- a/notebooks/02.Analysis.ipynb
+++ b/notebooks/02.Analysis.ipynb
@@ -1407,12 +1407,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01dc6b44-8a32-439a-84ee-bc2dd9172a85",
+   "cell_type": "markdown",
+   "id": "f2d5192c-fe3c-4b73-b377-e1d48dc1b541",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<p>\n",
+    "    To raise drivers awerness, <strong>New Yourk City</strong> should consider introducing <strong>courses or trainings programs for residentals</strong> as lack of attention is a leadingy contributing factor in traffic accidents.\n",
+    "</p>\n",
+    "<p>\n",
+    "    Moreover, <strong>Queens</strong> stands out when it comes to <strong>incidents</strong> caused by <strong>unsafe speed</strong>. The City should improve infrastructure in the borough by installing more <strong>speed bumps</strong> and <strong>increasing speed enforcment</strong> to help prevent further deaths and injuries.\n",
+    "</p>\n",
+    "<p>\n",
+    "    Finally, residents should <strong>exercise extra caution</strong>, when driving through <strong>Brooklyn</strong> and <strong>Queens</strong>, as these are <strong>the most dangerous boroughs</strong> in terms of accident frequency and death rate. \n",
+    "</p>"
+   ]
   }
  ],
  "metadata": {
