--- a/notebooks/02.Analysis.ipynb
+++ b/notebooks/02.Analysis.ipynb
@@ -1412,7 +1412,7 @@
    "metadata": {},
    "source": [
     "<p>\n",
-    "    To raise drivers awerness, <strong>New Yourk City</strong> should consider introducing <strong>courses or trainings programs for residentals</strong> as lack of attention is a leadingy contributing factor in traffic accidents.\n",
+    "    To raise drivers awereness, <strong>New York City</strong> should consider introducing <strong>courses or trainings programs for residents</strong> as lack of attention is a leadingy contributing factor in traffic accidents.\n",
     "</p>\n",
     "<p>\n",
     "    Moreover, <strong>Queens</strong> stands out when it comes to <strong>incidents</strong> caused by <strong>unsafe speed</strong>. The City should improve infrastructure in the borough by installing more <strong>speed bumps</strong> and <strong>increasing speed enforcment</strong> to help prevent further deaths and injuries.\n",
